<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>slam</name>
    <version>0.20.4</version>
    <description>Aapts FAST_LIVO to Robosense Active Camera</description>

    <maintainer email="rumble.liu@robosense.cn">Rumble Liu</maintainer>
    <maintainer email="silence.song@robosense.cn">Silence Song</maintainer>

    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>tf2_ros</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>